cmake_minimum_required(VERSION 2.8.3)
project(chemestry_robotics)
find_package(catkin REQUIRED COMPONENTS geometry_msgs roscpp sensor_msgs)
catkin_package()
include_directories(include ${catkin_INCLUDE_DIRS})
add_executable(hydrochloridic src/hydrochloric.cpp)
target_link_libraries(stdr_node ${catkin_LIBRARIES})
