cmake_minimum_required(VERSION 2.8.3)
project(chemestry_robotics)
find_package(catkin REQUIRED COMPONENTS geometry_msgs roscpp)
catkin_package()
include_directories(include ${catkin_INCLUDE_DIRS})
add_executable(hydrochloridic src/hydrochloric.cpp src/atom.cpp src/molecule.cpp)
target_link_libraries(hydrochloridic ${catkin_LIBRARIES})
